crates/auto-ascii-eval/tests/snapshots/golden_grids__checker-drift_206x58_ascii.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 206x58  viewport: 206x58  pads: L0 R0 T0 B0
palette: ascii  fg: chroma
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|@  0@; 1@C ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@@  @@, C@1 ;@0  @@  0@; 1@C ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@@  @@, C@1 ;@0  @|
| 0@; f@f ;@C ,@@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@, C@; f@f ;@0  0@; f@f ;@C ,@@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@, C@; f@f ;@0 |
|_,"C_1"1_f";__""0_;"f_f"1_C""__,"C_1"1_C";__""C_;"f_f";_C""__;"C_1"1_C",__""C_1"f_f";_0""__;"f_1"1_C",__,"C_1"1_f";__""0_;"f_f"1_C""__,"C_1"1_C";__""C_;"f_f";_C""__;"C_1"1_C",__""C_1"f_f";_0""__;"f_1"1_C",_|
|"__;"f_f"1__""__""C_1"1_f""__""__;"f_f"1__""__""f_1"1_f""__""__1"f_f";__""__""f_1"1_C""__""__1"f_f";__""__;"f_f"1__""__""C_1"1_f""__""__;"f_f"1__""__""f_1"1_f""__""__1"f_f";__""__""f_1"1_C""__""__1"f_f";__"|
|_""__1"1_f""__""__""f_f"1__""__""__1"1_f""__""__""f_f""__""__""f_1"1__""__""__1"f_f""__""__""f_1"1__""__""__1"1_f""__""__""f_f"1__""__""__1"1_f""__""__""f_f""__""__""f_1"1__""__""__1"f_f""__""__""f_1"1__""_|
|"__""f_f"1__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__1"f_f""__""__""f_f"1__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__1"f_f""__"|
|_""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""_|
|"__""__1""__""__""__f"1__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__1"f__""__""__""1_1""__""__""__1""__""__""__f"1__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__1"f__""__""__""1_1""__"|
|_""__f"1_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_f"f__""__""__f"1_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_f"f__""_|
|"__""1_1"f__""__""__f"f_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_f"f__""__""__f"1_1""__""__""1_1"f__""__""__f"f_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_f"f__""__""__f"1_1""__"|
|_""__f"f_1""__""__""1_1"f__""__""1_f"f_1""__""__f"1_1"f__""__""1_f"f_1""__""__f"1_1""__""__""1_f"f__""__""__f"f_1""__""__""1_1"f__""__""1_f"f_1""__""__f"1_1"f__""__""1_f"f_1""__""__f"1_1""__""__""1_f"f__""_|
|"__C"1_1"f_;""__"";_f"f_1"C__""__C"1_1"f_;""__"";_f"f_;""__"";_f"1_1"C__""__C"1_f"f_;""__"";_f"1_1"C__""__C"1_1"f_;""__"";_f"f_1"C__""__C"1_1"f_;""__"";_f"f_;""__"";_f"1_1"C__""__C"1_f"f_;""__"";_f"1_1"C__"|
|,00;,f0f,10C,,00,,C01,10C,;00,,00;,f0f,;00,,00,,C01,10C,,00,,00;,f0f,;00,,00;,C01,10C,,00,,C01,f0f,;00,,00;,f0f,10C,,00,,C01,10C,;00,,00;,f0f,;00,,00,,C01,10C,,00,,00;,f0f,;00,,00;,C01,10C,,00,,C01,f0f,;00,|
|@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @|
| @@, C@f ;@0  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  0@; f@f ,@@  @@, C@f ;@0  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  0@; f@f ,@@ |
|@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @|
|,00;,f0f,10C,,00,,C01,10C,;00,,00;,f0f,;00,,00,,C01,10C,,00,,00;,f0f,;00,,00;,C01,10C,,00,,C01,f0f,;00,,00;,f0f,10C,,00,,C01,10C,;00,,00;,f0f,;00,,00,,C01,10C,,00,,00;,f0f,;00,,00;,C01,10C,,00,,C01,f0f,;00,|
|_""C_1"1_f";__""__;"f_f"1_C""__""C_1"1_f";__""__;"f_f";__""__;"f_1"1_C""__""C_1"f_f";__""__;"f_1"1_C""__""C_1"1_f";__""__;"f_f"1_C""__""C_1"1_f";__""__;"f_f";__""__;"f_1"1_C""__""C_1"f_f";__""__;"f_1"1_C""_|
|"__""f_f"1__""__""__1"1_f""__""__1"f_f"1__""__""f_1"1_f""__""__1"f_f"1__""__""f_1"1__""__""__1"f_f""__""__""f_f"1__""__""__1"1_f""__""__1"f_f"1__""__""f_1"1_f""__""__1"f_f"1__""__""f_1"1__""__""__1"f_f""__"|
|_""__1"1_f""__""__""f_f"1__""__""__1"1_f""__""__""f_f""__""__""__1"1__""__""__1"f_f""__""__""f_1"1__""__""__1"1_f""__""__""f_f"1__""__""__1"1_f""__""__""f_f""__""__""__1"1__""__""__1"f_f""__""__""f_1"1__""_|
|"__""f_1"1__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__1"f_f""__""__""f_1"1__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__1"f_f""__"|
|_""__""1__""__""__""f_1""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""1_f""__""__""__1"1__""__""__""1__""__""__""f_1""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""1_f""__""__""__1"1__""_|
|"__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__"|
|_""__f"f_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_f"f__""__""__f"f_1""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""1_f"f__""_|
|"__""1_1"f__""__""__f"f_1""__""__""1_1"f__""__""__f"f__""__""__f"1_1""__""__""1_f"f__""__""__f"1_1""__""__""1_1"f__""__""__f"f_1""__""__""1_1"f__""__""__f"f__""__""__f"1_1""__""__""1_f"f__""__""__f"1_1""__"|
|_"";_f"f_1""__""__C"1_1"f__""__"";_f"f_1""__""__f"1_1"f__""__""1_f"f_;""__""__f"1_1"C__""__""1_f"f_;""__"";_f"f_1""__""__C"1_1"f__""__"";_f"f_1""__""__f"1_1"f__""__""1_f"f_;""__""__f"1_1"C__""__""1_f"f_;""_|
|",_C"1_1"f_;""__0";_f"f_1"C__"",_C"1_1"C_;""__C";_f"f_;"C__"";_C"1_1"C_,""__C"1_f"f_;"0__"";_f"1_1"C_,"",_C"1_1"f_;""__0";_f"f_1"C__"",_C"1_1"C_;""__C";_f"f_;"C__"";_C"1_1"C_,""__C"1_f"f_;"0__"";_f"1_1"C_,"|
| 0@; f@f ;@C ,@@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@, C@; f@f ;@0  0@; f@f ;@C ,@@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@, C@; f@f ;@0 |
|@  0@; 1@C ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@@  @@, C@1 ;@0  @@  0@; 1@C ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@@  @@, C@1 ;@0  @|
| @@, C@f ;@0  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  0@; f@f ,@@  @@, C@f ;@0  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  0@; f@f ,@@ |
|@, C@1 1@C ;@0  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  0@, C@1 1@C ,@@, C@1 1@C ;@0  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  0@, C@1 1@C ,@|
|"0_;"f_f"1_C""__,"C_1"1_f";__""0_;"f_f";_C""__;"C_1"1_C";__""C_;"f_f";_0""__;"f_1"1_C",__""C_1"f_f";_0""0_;"f_f"1_C""__,"C_1"1_f";__""0_;"f_f";_C""__;"C_1"1_C";__""C_;"f_f";_0""__;"f_1"1_C",__""C_1"f_f";_0"|
|_""C_1"1_f""__""__;"f_f"1__""__""C_1"1_f""__""__1"f_f"1__""__""f_1"1_C""__""__1"f_f";__""__""f_1"1_C""__""C_1"1_f""__""__;"f_f"1__""__""C_1"1_f""__""__1"f_f"1__""__""f_1"1_C""__""__1"f_f";__""__""f_1"1_C""_|
|"__""f_f"1__""__""__1"1_f""__""__""f_f"1__""__""__1"1__""__""__1"f_f""__""__""f_1"1__""__""__1"f_f""__""__""f_f"1__""__""__1"1_f""__""__""f_f"1__""__""__1"1__""__""__1"f_f""__""__""f_1"1__""__""__1"f_f""__"|
|_""__1"1_f""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""f_1"1__""__""__1"1_f""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""f_1"1__""_|
|"__""f_1""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""f_1""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__"|
|_""__""1__""__""__""1_1""__""__""__f"1__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__1"f__""__""__""1__""__""__""1_1""__""__""__f"1__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__1"f__""_|
|"__""1_1"f__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__f"1_1""__""__""1_1"f__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__f"1_1""__"|
|_""__f"f_1""__""__""1_1"f__""__""__f"f_1""__""__""1_1""__""__""__f"f__""__""__f"1_1""__""__""1_f"f__""__""__f"f_1""__""__""1_1"f__""__""__f"f_1""__""__""1_1""__""__""__f"f__""__""__f"1_1""__""__""1_f"f__""_|
|"__""1_1"f__""__""__f"f_1""__""__f"1_1"f__""__""1_f"f_1""__""__f"1_1"f__""__""1_f"f__""__""__f"1_1""__""__""1_1"f__""__""__f"f_1""__""__f"1_1"f__""__""1_f"f_1""__""__f"1_1"f__""__""1_f"f__""__""__f"1_1""__"|
|_"";_f"f_1"C__""__C"1_1"f_;""__"";_f"f_1"C__""__C"1_1"C__""__C"1_f"f_;""__"";_f"1_1"C__""__C"1_f"f_;""__"";_f"f_1"C__""__C"1_1"f_;""__"";_f"f_1"C__""__C"1_1"C__""__C"1_f"f_;""__"";_f"1_1"C__""__C"1_f"f_;""_|
|0,,C01,10f,;00,,00;,f0f,;0C,,00,,C01,10C,,00,,00;,f0f,;00,,00,,C01,10C,,00,,C0;,f0f,;00,,00;,f01,10C,,00,,C01,10f,;00,,00;,f0f,;0C,,00,,C01,10C,,00,,00;,f0f,;00,,00,,C01,10C,,00,,C0;,f0f,;00,,00;,f01,10C,,0|
| @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ,@0  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ,@0 |
|@  0@; 1@C ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@@  @@, C@1 ;@0  @@  0@; 1@C ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@@  @@, C@1 ;@0  @|
| @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ,@@  @@, f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ,@@ |
|0,,C01,10f,;00,,00;,f0f,;0C,,00,,C01,10C,,00,,00;,f0f,;00,,00,,C01,10C,,00,,C0;,f0f,;00,,00;,f01,10C,,00,,C01,10f,;00,,00;,f0f,;0C,,00,,C01,10C,,00,,00;,f0f,;00,,00,,C01,10C,,00,,C0;,f0f,;00,,00;,f01,10C,,0|
|"__;"f_f"1_C""__""C_1"1_f";__""__;"f_f"1_C""__""C_1"1_C""__""C_1"f_f";__""__;"f_1"1_C""__""C_1"f_f";__""__;"f_f"1_C""__""C_1"1_f";__""__;"f_f"1_C""__""C_1"1_C""__""C_1"f_f";__""__;"f_1"1_C""__""C_1"f_f";__"|
|_""__1"1_f""__""__""f_f"1__""__""f_1"1_f""__""__1"f_f"1__""__""f_1"1_f""__""__1"f_f""__""__""f_1"1__""__""__1"1_f""__""__""f_f"1__""__""f_1"1_f""__""__1"f_f"1__""__""f_1"1_f""__""__1"f_f""__""__""f_1"1__""_|
|"__""f_f"1__""__""__1"1_f""__""__""f_f"1__""__""__1"1__""__""__""f_f""__""__""f_1"1__""__""__1"f_f""__""__""f_f"1__""__""__1"1_f""__""__""f_f"1__""__""__1"1__""__""__""f_f""__""__""f_1"1__""__""__1"f_f""__"|
|_""__1"1_f""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""f_1"1__""__""__1"1_f""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""f_f""__""__""f_1"1__""_|
|"__""__1""__""__""__1"1__""__""__""f_1""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""1_f""__""__""__1""__""__""__1"1__""__""__""f_1""__""__""__1"1__""__""__""f_f""__""__""__1"1__""__""__""1_f""__"|
|_""__f"1__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__f"1__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""_|
|"__""1_1"f__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__f"1_1""__""__""1_1"f__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__""1_1""__""__""__f"f__""__""__f"1_1""__"|
|_""__f"f_1""__""__""1_1"f__""__""__f"f_1""__""__""1_1""__""__""1_f"f__""__""__f"1_1""__""__""1_f"f__""__""__f"f_1""__""__""1_1"f__""__""__f"f_1""__""__""1_1""__""__""1_f"f__""__""__f"1_1""__""__""1_f"f__""_|
|"__C"1_1"f__""__"";_f"f_1""__""__C"1_1"f__""__""1_f"f_1""__""__f"1_1"C__""__""1_f"f_;""__""__f"1_1"C__""__C"1_1"f__""__"";_f"f_1""__""__C"1_1"f__""__""1_f"f_1""__""__f"1_1"C__""__""1_f"f_;""__""__f"1_1"C__"|
|_0";_f"f_1"C__"",_C"1_1"f_;""__0";_f"f_;"C__"";_C"1_1"C_;""__C";_f"f_;"0__"";_f"1_1"C_,""__C"1_f"f_;"0__0";_f"f_1"C__"",_C"1_1"f_;""__0";_f"f_;"C__"";_C"1_1"C_;""__C";_f"f_;"0__"";_f"1_1"C_,""__C"1_f"f_;"0_|
|@, C@1 1@C ;@0  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  0@, C@1 1@C ,@@, C@1 1@C ;@0  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  0@, C@1 1@C ,@|
| @@, C@f ;@0  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  0@; f@f ,@@  @@, C@f ;@0  @@  C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C  @@  0@; f@f ,@@ |
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 3ba78e297fc73edd
  1 190d12d82029d1eb
  2 8bb268c8aca4c44d
  3 c80bd3b4b2fc2fbb
  4 61b9e6aefd3d13ed
  5 3f6207a4c1ae2bcb
  6 627bf16d313af123
  7 a4a15ac8b5ca22f7
  8 006d639ff6b60e5f
  9 6d8146246a17fc4d
 10 5a8b46dfb343912d
 11 104f2d732a73831d
 12 03ba734f11eeadcd
 13 79a6f1877b952281
 14 176fe562d7a26c5d
 15 314c93332b81ea8f
 16 f4c2e558cc26fe95
 17 2fad201e179218bb
 18 9ac176bb1c5fca57
 19 cfd33cd34387c115
 20 14140a65ed198de7
 21 c1d7dfc8d8cbbf79
 22 7ae8fac45dd90875
 23 cc0722b4a86c1f9f
 24 dd835119f70fced7
 25 e09697340966ef0b
 26 18f8dadd05d354f5
 27 6f3112894f599775
 28 3ba78e297fc73edd
 29 176fe562d7a26c5d
 30 4c38ca6787ed31ef
 31 819721385dba0e11
 32 2181cbf21d89330f
 33 5122057d4d46286d
 34 3a95f1ed945ffcfb
 35 47e111bb946a191f
 36 cadad325d3b448f7
 37 de8110562ab88a7b
 38 5ba5ae7aec852395
 39 2983e06db896c18d
 40 ce72c3f6c29e0ae5
 41 8a0727530ed7104d
 42 244f98d67e804e21
 43 3ba78e297fc73edd
 44 daa105f187bb4fef
 45 741b95c471e9bd25
 46 5672d0017d05f0d7
 47 3015ffb0aa2539d7
 48 4474ba0177c494ed
 49 c4b095089dd68153
 50 47b3047ccaf5692d
 51 132a9fa4a340d549
 52 b3b36fb1a1c3156f
 53 aade9066acabd2df
 54 c3857303805786b7
 55 92a1807ceae3a629
 56 7ee70f9ac2723271
 57 176fe562d7a26c5d
