crates/auto-ascii-eval/tests/snapshots/golden_grids__checker-drift_206x58_mono.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 206x58  viewport: 206x58  pads: L0 R0 T0 B0
palette: mono  fg: none (glyph-only)
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|@  8@: c@O .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@@  @@. O@c :@8  @@  8@: c@O .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@@  @@. O@c :@8  @|
| 8@: o@o :@O .@@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@. O@: o@o :@8  8@: o@o :@O .@@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@. O@: o@o :@8 |
|_."O_c"c_o":__""8_:"o_o"c_O""__."O_c"c_O":__""O_:"o_o":_O""__:"O_c"c_O".__""O_c"o_o":_8""__:"o_c"c_O".__."O_c"c_o":__""8_:"o_o"c_O""__."O_c"c_O":__""O_:"o_o":_O""__:"O_c"c_O".__""O_c"o_o":_8""__:"o_c"c_O"._|
|"__:"o_o"c__""__""O_c"c_o""__""__:"o_o"c__""__""o_c"c_o""__""__c"o_o":__""__""o_c"c_O""__""__c"o_o":__""__:"o_o"c__""__""O_c"c_o""__""__:"o_o"c__""__""o_c"c_o""__""__c"o_o":__""__""o_c"c_O""__""__c"o_o":__"|
|_""__c"c_o""__""__""o_o"c__""__""__c"c_o""__""__""o_o""__""__""o_c"c__""__""__c"o_o""__""__""o_c"c__""__""__c"c_o""__""__""o_o"c__""__""__c"c_o""__""__""o_o""__""__""o_c"c__""__""__c"o_o""__""__""o_c"c__""_|
|"__""o_o"c__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__c"o_o""__""__""o_o"c__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__c"o_o""__"|
|_""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""_|
|"__""__c""__""__""__o"c__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__c"o__""__""__""c_c""__""__""__c""__""__""__o"c__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__c"o__""__""__""c_c""__"|
|_""__o"c_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_o"o__""__""__o"c_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_o"o__""_|
|"__""c_c"o__""__""__o"o_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_o"o__""__""__o"c_c""__""__""c_c"o__""__""__o"o_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_o"o__""__""__o"c_c""__"|
|_""__o"o_c""__""__""c_c"o__""__""c_o"o_c""__""__o"c_c"o__""__""c_o"o_c""__""__o"c_c""__""__""c_o"o__""__""__o"o_c""__""__""c_c"o__""__""c_o"o_c""__""__o"c_c"o__""__""c_o"o_c""__""__o"c_c""__""__""c_o"o__""_|
|"__O"c_c"o_:""__"":_o"o_c"O__""__O"c_c"o_:""__"":_o"o_:""__"":_o"c_c"O__""__O"c_o"o_:""__"":_o"c_c"O__""__O"c_c"o_:""__"":_o"o_c"O__""__O"c_c"o_:""__"":_o"o_:""__"":_o"c_c"O__""__O"c_o"o_:""__"":_o"c_c"O__"|
|.88:.o8o.c8O..88..O8c.c8O.:88..88:.o8o.:88..88..O8c.c8O..88..88:.o8o.:88..88:.O8c.c8O..88..O8c.o8o.:88..88:.o8o.c8O..88..O8c.c8O.:88..88:.o8o.:88..88..O8c.c8O..88..88:.o8o.:88..88:.O8c.c8O..88..O8c.o8o.:88.|
|@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @|
| @@. O@o :@8  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  8@: o@o .@@  @@. O@o :@8  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  8@: o@o .@@ |
|@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @|
|.88:.o8o.c8O..88..O8c.c8O.:88..88:.o8o.:88..88..O8c.c8O..88..88:.o8o.:88..88:.O8c.c8O..88..O8c.o8o.:88..88:.o8o.c8O..88..O8c.c8O.:88..88:.o8o.:88..88..O8c.c8O..88..88:.o8o.:88..88:.O8c.c8O..88..O8c.o8o.:88.|
|_""O_c"c_o":__""__:"o_o"c_O""__""O_c"c_o":__""__:"o_o":__""__:"o_c"c_O""__""O_c"o_o":__""__:"o_c"c_O""__""O_c"c_o":__""__:"o_o"c_O""__""O_c"c_o":__""__:"o_o":__""__:"o_c"c_O""__""O_c"o_o":__""__:"o_c"c_O""_|
|"__""o_o"c__""__""__c"c_o""__""__c"o_o"c__""__""o_c"c_o""__""__c"o_o"c__""__""o_c"c__""__""__c"o_o""__""__""o_o"c__""__""__c"c_o""__""__c"o_o"c__""__""o_c"c_o""__""__c"o_o"c__""__""o_c"c__""__""__c"o_o""__"|
|_""__c"c_o""__""__""o_o"c__""__""__c"c_o""__""__""o_o""__""__""__c"c__""__""__c"o_o""__""__""o_c"c__""__""__c"c_o""__""__""o_o"c__""__""__c"c_o""__""__""o_o""__""__""__c"c__""__""__c"o_o""__""__""o_c"c__""_|
|"__""o_c"c__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__c"o_o""__""__""o_c"c__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__c"o_o""__"|
|_""__""c__""__""__""o_c""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""c_o""__""__""__c"c__""__""__""c__""__""__""o_c""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""c_o""__""__""__c"c__""_|
|"__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__"|
|_""__o"o_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_o"o__""__""__o"o_c""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""c_o"o__""_|
|"__""c_c"o__""__""__o"o_c""__""__""c_c"o__""__""__o"o__""__""__o"c_c""__""__""c_o"o__""__""__o"c_c""__""__""c_c"o__""__""__o"o_c""__""__""c_c"o__""__""__o"o__""__""__o"c_c""__""__""c_o"o__""__""__o"c_c""__"|
|_"":_o"o_c""__""__O"c_c"o__""__"":_o"o_c""__""__o"c_c"o__""__""c_o"o_:""__""__o"c_c"O__""__""c_o"o_:""__"":_o"o_c""__""__O"c_c"o__""__"":_o"o_c""__""__o"c_c"o__""__""c_o"o_:""__""__o"c_c"O__""__""c_o"o_:""_|
|"._O"c_c"o_:""__8":_o"o_c"O__""._O"c_c"O_:""__O":_o"o_:"O__"":_O"c_c"O_.""__O"c_o"o_:"8__"":_o"c_c"O_.""._O"c_c"o_:""__8":_o"o_c"O__""._O"c_c"O_:""__O":_o"o_:"O__"":_O"c_c"O_.""__O"c_o"o_:"8__"":_o"c_c"O_."|
| 8@: o@o :@O .@@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@. O@: o@o :@8  8@: o@o :@O .@@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@. O@: o@o :@8 |
|@  8@: c@O .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@@  @@. O@c :@8  @@  8@: c@O .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@@  @@. O@c :@8  @|
| @@. O@o :@8  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  8@: o@o .@@  @@. O@o :@8  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  8@: o@o .@@ |
|@. O@c c@O :@8  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  8@. O@c c@O .@@. O@c c@O :@8  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  8@. O@c c@O .@|
|"8_:"o_o"c_O""__."O_c"c_o":__""8_:"o_o":_O""__:"O_c"c_O":__""O_:"o_o":_8""__:"o_c"c_O".__""O_c"o_o":_8""8_:"o_o"c_O""__."O_c"c_o":__""8_:"o_o":_O""__:"O_c"c_O":__""O_:"o_o":_8""__:"o_c"c_O".__""O_c"o_o":_8"|
|_""O_c"c_o""__""__:"o_o"c__""__""O_c"c_o""__""__c"o_o"c__""__""o_c"c_O""__""__c"o_o":__""__""o_c"c_O""__""O_c"c_o""__""__:"o_o"c__""__""O_c"c_o""__""__c"o_o"c__""__""o_c"c_O""__""__c"o_o":__""__""o_c"c_O""_|
|"__""o_o"c__""__""__c"c_o""__""__""o_o"c__""__""__c"c__""__""__c"o_o""__""__""o_c"c__""__""__c"o_o""__""__""o_o"c__""__""__c"c_o""__""__""o_o"c__""__""__c"c__""__""__c"o_o""__""__""o_c"c__""__""__c"o_o""__"|
|_""__c"c_o""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""o_c"c__""__""__c"c_o""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""o_c"c__""_|
|"__""o_c""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""o_c""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__"|
|_""__""c__""__""__""c_c""__""__""__o"c__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__c"o__""__""__""c__""__""__""c_c""__""__""__o"c__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__c"o__""_|
|"__""c_c"o__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__o"c_c""__""__""c_c"o__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__o"c_c""__"|
|_""__o"o_c""__""__""c_c"o__""__""__o"o_c""__""__""c_c""__""__""__o"o__""__""__o"c_c""__""__""c_o"o__""__""__o"o_c""__""__""c_c"o__""__""__o"o_c""__""__""c_c""__""__""__o"o__""__""__o"c_c""__""__""c_o"o__""_|
|"__""c_c"o__""__""__o"o_c""__""__o"c_c"o__""__""c_o"o_c""__""__o"c_c"o__""__""c_o"o__""__""__o"c_c""__""__""c_c"o__""__""__o"o_c""__""__o"c_c"o__""__""c_o"o_c""__""__o"c_c"o__""__""c_o"o__""__""__o"c_c""__"|
|_"":_o"o_c"O__""__O"c_c"o_:""__"":_o"o_c"O__""__O"c_c"O__""__O"c_o"o_:""__"":_o"c_c"O__""__O"c_o"o_:""__"":_o"o_c"O__""__O"c_c"o_:""__"":_o"o_c"O__""__O"c_c"O__""__O"c_o"o_:""__"":_o"c_c"O__""__O"c_o"o_:""_|
|8..O8c.c8o.:88..88:.o8o.:8O..88..O8c.c8O..88..88:.o8o.:88..88..O8c.c8O..88..O8:.o8o.:88..88:.o8c.c8O..88..O8c.c8o.:88..88:.o8o.:8O..88..O8c.c8O..88..88:.o8o.:88..88..O8c.c8O..88..O8:.o8o.:88..88:.o8c.c8O..8|
| @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o .@8  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o .@8 |
|@  8@: c@O .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@@  @@. O@c :@8  @@  8@: c@O .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@@  @@. O@c :@8  @|
| @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o .@@  @@. o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o .@@ |
|8..O8c.c8o.:88..88:.o8o.:8O..88..O8c.c8O..88..88:.o8o.:88..88..O8c.c8O..88..O8:.o8o.:88..88:.o8c.c8O..88..O8c.c8o.:88..88:.o8o.:8O..88..O8c.c8O..88..88:.o8o.:88..88..O8c.c8O..88..O8:.o8o.:88..88:.o8c.c8O..8|
|"__:"o_o"c_O""__""O_c"c_o":__""__:"o_o"c_O""__""O_c"c_O""__""O_c"o_o":__""__:"o_c"c_O""__""O_c"o_o":__""__:"o_o"c_O""__""O_c"c_o":__""__:"o_o"c_O""__""O_c"c_O""__""O_c"o_o":__""__:"o_c"c_O""__""O_c"o_o":__"|
|_""__c"c_o""__""__""o_o"c__""__""o_c"c_o""__""__c"o_o"c__""__""o_c"c_o""__""__c"o_o""__""__""o_c"c__""__""__c"c_o""__""__""o_o"c__""__""o_c"c_o""__""__c"o_o"c__""__""o_c"c_o""__""__c"o_o""__""__""o_c"c__""_|
|"__""o_o"c__""__""__c"c_o""__""__""o_o"c__""__""__c"c__""__""__""o_o""__""__""o_c"c__""__""__c"o_o""__""__""o_o"c__""__""__c"c_o""__""__""o_o"c__""__""__c"c__""__""__""o_o""__""__""o_c"c__""__""__c"o_o""__"|
|_""__c"c_o""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""o_c"c__""__""__c"c_o""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""o_o""__""__""o_c"c__""_|
|"__""__c""__""__""__c"c__""__""__""o_c""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""c_o""__""__""__c""__""__""__c"c__""__""__""o_c""__""__""__c"c__""__""__""o_o""__""__""__c"c__""__""__""c_o""__"|
|_""__o"c__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__o"c__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""_|
|"__""c_c"o__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__o"c_c""__""__""c_c"o__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__""c_c""__""__""__o"o__""__""__o"c_c""__"|
|_""__o"o_c""__""__""c_c"o__""__""__o"o_c""__""__""c_c""__""__""c_o"o__""__""__o"c_c""__""__""c_o"o__""__""__o"o_c""__""__""c_c"o__""__""__o"o_c""__""__""c_c""__""__""c_o"o__""__""__o"c_c""__""__""c_o"o__""_|
|"__O"c_c"o__""__"":_o"o_c""__""__O"c_c"o__""__""c_o"o_c""__""__o"c_c"O__""__""c_o"o_:""__""__o"c_c"O__""__O"c_c"o__""__"":_o"o_c""__""__O"c_c"o__""__""c_o"o_c""__""__o"c_c"O__""__""c_o"o_:""__""__o"c_c"O__"|
|_8":_o"o_c"O__""._O"c_c"o_:""__8":_o"o_:"O__"":_O"c_c"O_:""__O":_o"o_:"8__"":_o"c_c"O_.""__O"c_o"o_:"8__8":_o"o_c"O__""._O"c_c"o_:""__8":_o"o_:"O__"":_O"c_c"O_:""__O":_o"o_:"8__"":_o"c_c"O_.""__O"c_o"o_:"8_|
|@. O@c c@O :@8  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  8@. O@c c@O .@@. O@c c@O :@8  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  8@. O@c c@O .@|
| @@. O@o :@8  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  8@: o@o .@@  @@. O@o :@8  @@  O@c c@O .@@  8@: o@o :@8  @@. O@c c@O .@@  8@: o@o :@8  @@. O@c c@O  @@  8@: o@o .@@ |
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
