crates/auto-ascii-eval/tests/snapshots/golden_grids__checker-drift_48x12_ascii.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 48x12  viewport: 43x12  pads: L2 R3 T0 B0
palette: ascii  fg: chroma
+------------------------------------------------+
|  ++----+++++----++++-----++++----+++++----++   |
|  ++----+++++----++++-----++++----+++++----++   |
|  --++++-----++++----+++++----++++-----++++--   |
|  --++++-----++++----+++++----++++-----++++--   |
|  ++----+++++----++++-----++++----+++++----++   |
|  ++----+++++----++++-----++++----+++++----++   |
|  --++++-----++++----+++++----++++-----++++--   |
|  --++++-----++++----+++++----++++-----++++--   |
|  ++----+++++----++++-----++++----+++++----++   |
|  ++----+++++----++++-----++++----+++++----++   |
|  --++++-----++++----+++++----++++-----++++--   |
|  --++++-----++++----+++++----++++-----++++--   |
+------------------------------------------------+
fg-fnv64 per row:
  0 01f7b0700c40940e
  1 01f7b0700c40940e
  2 803cee7f3d8fe6c4
  3 803cee7f3d8fe6c4
  4 01f7b0700c40940e
  5 01f7b0700c40940e
  6 803cee7f3d8fe6c4
  7 803cee7f3d8fe6c4
  8 01f7b0700c40940e
  9 01f7b0700c40940e
 10 803cee7f3d8fe6c4
 11 803cee7f3d8fe6c4
