crates/auto-ascii-eval/tests/snapshots/golden_grids__checker-drift_80x24_mono.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: mono  fg: none (glyph-only)
+--------------------------------------------------------------------------------+
|c"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"c|
|cococcococcococcococcococcococcococcococcococcococcococcococcococcococcococcococ|
|c_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_c|
|oc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"cooc"co|
|ococoococoococoococoococoococoococoococoococoococoococoococoococoococoococoococo|
|o"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"o|
|co_occo_occo_occo_occo_occo_occo_occo_occo_occo_occo_occo_occo_occo_occo_occo_oc|
|cococcococcococcococcococcococcococcococcococcococcococcococcococcococcococcococ|
|c_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_cc_"_c|
|ococoococoococoococoococoococoococoococoococoococoococoococoococoococoococoococo|
|ococoococoococoococoococoococoococoococoococoococoococoococoococoococoococoococo|
|c"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"c|
|cococcococcococcococcococcococcococcococcococcococcococcococcococcococcococcococ|
|cococcococcococcococcococcococcococcococcococcococcococcococcococcococcococcococ|
|o_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_o|
|ococoococoococoococoococoococoococoococoococoococoococoococoococoococoococoococo|
|oc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_cooc_co|
|c"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"cc"_"c|
|cococcococcococcococcococcococcococcococcococcococcococcococcococcococcococcococ|
|co"occo"occo"occo"occo"occo"occo"occo"occo"occo"occo"occo"occo"occo"occo"occo"oc|
|o_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_oo_"_o|
|ococoococoococoococoococoococoococoococoococoococoococoococoococoococoococoococo|
|o"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"oo"_"o|
|                                                                                |
+--------------------------------------------------------------------------------+
