crates/auto-ascii-eval/tests/snapshots/golden_grids__checker-drift_80x24_unicode.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: unicode  fg: chroma
+--------------------------------------------------------------------------------+
|░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░|
|░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░|
|░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░|
|▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒▒░▀░▒|
|▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒|
|▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒|
|░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░░▒▄▒░|
|░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░|
|░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░░▄▀▄░|
|▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒|
|▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒|
|░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░|
|░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░|
|░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░|
|▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒|
|▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒|
|▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒▒░▄░▒|
|░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░░▀▄▀░|
|░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░░▒░▒░|
|░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░░▒▀▒░|
|▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒▒▄▀▄▒|
|▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒▒░▒░▒|
|▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒▒▀▄▀▒|
|                                                                                |
+--------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 7d96a5ce7b66d7b5
  1 c9bca0d64e6d06f5
  2 b387a95e20200fd5
  3 d588cd547122d545
  4 234075f7ddaa27b5
  5 69f24f4f13aebb45
  6 d63f6122fae60f75
  7 c9bca0d64e6d06f5
  8 4f548760e96f5aa5
  9 234075f7ddaa27b5
 10 234075f7ddaa27b5
 11 028a12d81aaec765
 12 c9bca0d64e6d06f5
 13 c9bca0d64e6d06f5
 14 967922a29b838b15
 15 234075f7ddaa27b5
 16 f7851ff275ba0cb5
 17 ce27903d59111525
 18 c9bca0d64e6d06f5
 19 f2d7d1d14175fb15
 20 70ccd6794fb4ef45
 21 234075f7ddaa27b5
 22 d7513fd0793db0f5
 23 223995d44c4552f5
